--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Paging 3 sample</string>
+    <string name="app_name">paging3</string>
+    <string name="retry">Повторить</string>
+    <string name="refresh">Refresh</string>
 </resources>
